--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,6 @@ clickhouse-connect==0.6.23
 python-dotenv==1.0.0
 pydantic==2.10.1
 pydantic-settings==2.10.1
-openai==1.3.0
+openai>=1.3.0
 sentence-transformers==2.2.2
 numpy==1.24.3
